--- a/LoveProject/appsettings.json
+++ b/LoveProject/appsettings.json
@@ -9,8 +9,8 @@
     "Smtp": {
       "Host": "smtp.gmail.com",
       "Port": 587,
-      "Username": "egegelen2002@gmail.com",
-      "Password": "wnhiaplxzgdjhspt",
+      "Username": "<e-mail>",
+      "Password": "<password>",
       "EnableSSL": true
     }
   }
